--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@ header:
       url: "/about/"
 excerpt: "Software Engineer & Educator. I build practical solutions with Python, cloud, and modern web frameworks."
 ---
+
+Welcome to my personal website. Here you'll find information about my skills, experience, and projects.
+
+## Site Sections
+
+- **About** - background information and contact links.
+- **Projects** - highlights of work I've done.
+- **Resume** - download a PDF copy of my resume.
+- **Contact** - ways to connect with me online.
